--- a/react/front-board/src/pages/BoardList.module.css
+++ b/react/front-board/src/pages/BoardList.module.css
@@ -1,82 +1,50 @@
+.container{
 
-.head{
-  /* border: 1px solid #000; */
+}
+
+.search_div{
   display: flex;
   justify-content: end;
-  padding: 15px 0px;
-  width: 100%;
-  gap: 10px;
+  gap: 8px;
 }
 
-.select{
-  width: 100px;
+.list_div{
+  margin: 20px 0px;
 }
 
-.button{
-  width: 60px;
-  background-color: #EDEDCE;
-  border: none;
-  border-radius: 5px;
-}
-
-.table{
-  width: 100%;
+.list_table{
   text-align: center;
+  width: 100%;
 }
 
-.thead{
-  background-color: #215E61;
-  
+.list_table td{
+  padding: 8px 12px;
 }
-.thead tr{
 
-}
-.thead tr td{
-  border: 4px solid #ffffff;
-  padding: 7px;
-  font-size: 1.2rem;
-  font-weight: bold;
+.list_table > thead > tr{
+  border-top: 2px solid black;
+  border-bottom: 1px solid black;
+  background-color: black;
   color: white;
+  font-weight: bold;
 }
 
-.tbody{
-  
-  background-color: #FFD8DF;
+.list_table > tbody > tr{
+  border-bottom: 1px solid #666666;
 }
 
-.tbody tr td{
-  border: 2px solid #ffffff;
-  padding: 5px;
+.list_table > tbody > tr:nth-child(even){
+  background-color: rgba(200, 200, 200, 0.1);
 }
-.tbody>tr:nth-child(even){
-  background-color: #FFAAB8;
+
+.list_table > tbody > tr:hover{
+  background-color: rgba(200, 200, 200, 0.2);
 }
-/* .tbody>tr>td:nth-child(1) {
-  width: 10%;
-} */
-.tbody>tr>td:nth-child(2) {
-  padding-left: 10px;
+
+.list_table > tbody > tr > td:nth-child(2){
   text-align: left;
-  width: 30%;
 }
-/* .tbody>tr>td:nth-child(3) {
-  width: 15%;
-}
-.tbody>tr>td:nth-child(4) {
-  width: 30%;
-} */
-.tbody tr:hover{
-  background-color: #FFDAB3;
-}
-.button2div{
-  margin-top: 20px;
-  /* border: 1px solid #000; */
+
+.btn_div{
   text-align: center;
 }
-.button2{
-  padding: 5px 20px;
-  background-color: #9F8383;
-  border: none;  
-  border-radius: 8px;
-}
-
